# mshp-coverage-gap

./: .gitignore  Makefile  PROJECT_EXPLANATION.md  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: Overview.py  requirements.txt  streamlit_app.py
app/pages/: 1_Coverage_Map.py  2_School_Explorer.py  3_Priority_Rankings.py  4_Neighborhoods.py  5_Equity_Dashboard.py  6_Expansion_Simulator.py  7_Impact_Analysis.py
app/utils/: __init__.py  charts.py  data_loader.py
configs/: params.yml
data/manual/: mshp_school_list_2025-12-25.csv  mshp_school_list_expanded_2025-12-25.csv
data/processed/: bronx_schools_analysis_ready.csv  bronx_schools_analysis_ready_metadata.json  bronx_schools_clean.csv  bronx_schools_clean_metadata.json  bronx_schools_enhanced.csv  bronx_schools_full.csv  bronx_schools_with_attendance.csv  bronx_schools_with_attendance_metadata.json  bronx_schools_with_mshp_status.csv  bronx_schools_with_mshp_status_metadata.json  (+2 more)
docs/: data_dictionary.md  index.html  limitations.md  methodology.md  mshp_coverage_gap_map.html  mshp_coverage_gap_map_enhanced.html
gh-pages/: index.html
scripts/: 01_collect_doe_schools.py  04_collect_uhf_boundaries.py  05_process_and_join.py  08_analyze.py  10_visualize.py  10_visualize_enhanced.py  11_enhanced_analysis.py  12_enhanced_visualizations.py  13_add_demographics_health.py  14_demographics_visualizations.py  15_equity_analysis.py  16_health_burden_analysis.py  17_equity_visualizations.py  18_optimal_expansion.py
tests/: conftest.py  test_matching.py
(+45 files in other folders)
